--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1068</width>
+    <width>1148</width>
     <height>860</height>
    </rect>
   </property>
@@ -46,7 +46,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>1050</width>
+         <width>1130</width>
          <height>821</height>
         </rect>
        </property>
@@ -719,9 +719,9 @@
            <property name="geometry">
             <rect>
              <x>510</x>
-             <y>40</y>
-             <width>531</width>
-             <height>131</height>
+             <y>10</y>
+             <width>361</width>
+             <height>161</height>
             </rect>
            </property>
            <property name="title">
@@ -731,7 +731,7 @@
             <property name="geometry">
              <rect>
               <x>180</x>
-              <y>30</y>
+              <y>40</y>
               <width>81</width>
               <height>19</height>
              </rect>
@@ -743,27 +743,27 @@
            <widget class="QLabel" name="label_9">
             <property name="geometry">
              <rect>
-              <x>90</x>
+              <x>20</x>
               <y>70</y>
               <width>61</width>
-              <height>21</height>
+              <height>20</height>
              </rect>
             </property>
             <property name="frameShadow">
              <enum>QFrame::Plain</enum>
             </property>
             <property name="text">
-             <string>Transpose</string>
+             <string>Transpose:</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignHCenter|Qt::AlignTop</set>
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
             </property>
            </widget>
-           <widget class="QCheckBox" name="checkBox_2">
+           <widget class="CheckBox" name="checkBox_2">
             <property name="geometry">
              <rect>
               <x>180</x>
-              <y>90</y>
+              <y>100</y>
               <width>91</width>
               <height>21</height>
              </rect>
@@ -775,8 +775,8 @@
            <widget class="QLabel" name="label_8">
             <property name="geometry">
              <rect>
-              <x>10</x>
-              <y>70</y>
+              <x>20</x>
+              <y>40</y>
               <width>81</width>
               <height>21</height>
              </rect>
@@ -785,17 +785,17 @@
              <enum>QFrame::Plain</enum>
             </property>
             <property name="text">
-             <string>Master Tune</string>
+             <string>Master Tune:</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignHCenter|Qt::AlignTop</set>
+             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
             </property>
            </widget>
            <widget class="QLabel" name="label_5">
             <property name="geometry">
              <rect>
               <x>180</x>
-              <y>60</y>
+              <y>70</y>
               <width>91</width>
               <height>21</height>
              </rect>
@@ -804,89 +804,21 @@
              <string>Velocity value:</string>
             </property>
            </widget>
-           <widget class="QDial" name="transpose">
-            <property name="geometry">
-             <rect>
-              <x>100</x>
-              <y>20</y>
-              <width>41</width>
-              <height>41</height>
-             </rect>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="notchTarget">
-             <double>8.000000000000000</double>
-            </property>
-            <property name="notchesVisible">
-             <bool>true</bool>
-            </property>
-           </widget>
-           <widget class="QDial" name="masterTune">
-            <property name="geometry">
-             <rect>
-              <x>30</x>
-              <y>20</y>
-              <width>41</width>
-              <height>41</height>
-             </rect>
-            </property>
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="notchTarget">
-             <double>8.000000000000000</double>
-            </property>
-            <property name="notchesVisible">
-             <bool>true</bool>
-            </property>
-           </widget>
-           <widget class="QSpinBox" name="spinBox">
+           <widget class="QSpinBox" name="fixedVelocity">
             <property name="geometry">
              <rect>
               <x>270</x>
-              <y>60</y>
+              <y>70</y>
               <width>71</width>
               <height>22</height>
              </rect>
             </property>
            </widget>
-           <widget class="QComboBox" name="comboBox_3">
+           <widget class="ComboPicker" name="velocityCurve">
             <property name="geometry">
              <rect>
               <x>270</x>
-              <y>30</y>
+              <y>40</y>
               <width>71</width>
               <height>21</height>
              </rect>
@@ -926,6 +858,81 @@
               <string>Fixed</string>
              </property>
             </item>
+           </widget>
+           <widget class="QSpinBox" name="kbdTranspose">
+            <property name="geometry">
+             <rect>
+              <x>100</x>
+              <y>70</y>
+              <width>61</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="minimum">
+             <number>-36</number>
+            </property>
+            <property name="maximum">
+             <number>36</number>
+            </property>
+           </widget>
+           <widget class="ComboPicker" name="velocityCurve_2">
+            <property name="geometry">
+             <rect>
+              <x>100</x>
+              <y>100</y>
+              <width>61</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <item>
+             <property name="text">
+              <string>Off</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Delay</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Reverb</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>All</string>
+             </property>
+            </item>
+           </widget>
+           <widget class="QLabel" name="label_10">
+            <property name="geometry">
+             <rect>
+              <x>20</x>
+              <y>100</y>
+              <width>61</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Fx Bypass:</string>
+            </property>
+           </widget>
+           <widget class="QSpinBox" name="masterTune">
+            <property name="geometry">
+             <rect>
+              <x>100</x>
+              <y>40</y>
+              <width>61</width>
+              <height>21</height>
+             </rect>
+            </property>
+            <property name="minimum">
+             <number>-36</number>
+            </property>
+            <property name="maximum">
+             <number>36</number>
+            </property>
            </widget>
           </widget>
          </widget>
