--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -719,8 +719,8 @@
            <property name="geometry">
             <rect>
              <x>510</x>
-             <y>10</y>
-             <width>361</width>
+             <y>20</y>
+             <width>581</width>
              <height>161</height>
             </rect>
            </property>
@@ -730,8 +730,8 @@
            <widget class="QLabel" name="label_3">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>40</y>
+              <x>120</x>
+              <y>30</y>
               <width>81</width>
               <height>19</height>
              </rect>
@@ -744,8 +744,8 @@
             <property name="geometry">
              <rect>
               <x>20</x>
-              <y>70</y>
-              <width>61</width>
+              <y>130</y>
+              <width>71</width>
               <height>20</height>
              </rect>
             </property>
@@ -753,17 +753,17 @@
              <enum>QFrame::Plain</enum>
             </property>
             <property name="text">
-             <string>Transpose:</string>
+             <string>Transpose</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+             <set>Qt::AlignHCenter|Qt::AlignTop</set>
             </property>
            </widget>
            <widget class="CheckBox" name="checkBox_2">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>100</y>
+              <x>120</x>
+              <y>120</y>
               <width>91</width>
               <height>21</height>
              </rect>
@@ -775,9 +775,9 @@
            <widget class="QLabel" name="label_8">
             <property name="geometry">
              <rect>
-              <x>20</x>
-              <y>40</y>
-              <width>81</width>
+              <x>10</x>
+              <y>70</y>
+              <width>91</width>
               <height>21</height>
              </rect>
             </property>
@@ -785,17 +785,17 @@
              <enum>QFrame::Plain</enum>
             </property>
             <property name="text">
-             <string>Master Tune:</string>
+             <string>Master Tune</string>
             </property>
             <property name="alignment">
-             <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+             <set>Qt::AlignHCenter|Qt::AlignTop</set>
             </property>
            </widget>
            <widget class="QLabel" name="label_5">
             <property name="geometry">
              <rect>
-              <x>180</x>
-              <y>70</y>
+              <x>120</x>
+              <y>60</y>
               <width>91</width>
               <height>21</height>
              </rect>
@@ -807,8 +807,8 @@
            <widget class="QSpinBox" name="fixedVelocity">
             <property name="geometry">
              <rect>
-              <x>270</x>
-              <y>70</y>
+              <x>210</x>
+              <y>60</y>
               <width>71</width>
               <height>22</height>
              </rect>
@@ -817,8 +817,8 @@
            <widget class="ComboPicker" name="velocityCurve">
             <property name="geometry">
              <rect>
-              <x>270</x>
-              <y>40</y>
+              <x>210</x>
+              <y>30</y>
               <width>71</width>
               <height>21</height>
              </rect>
@@ -859,27 +859,11 @@
              </property>
             </item>
            </widget>
-           <widget class="QSpinBox" name="kbdTranspose">
+           <widget class="ComboPicker" name="fxBypass">
             <property name="geometry">
              <rect>
-              <x>100</x>
-              <y>70</y>
-              <width>61</width>
-              <height>21</height>
-             </rect>
-            </property>
-            <property name="minimum">
-             <number>-36</number>
-            </property>
-            <property name="maximum">
-             <number>36</number>
-            </property>
-           </widget>
-           <widget class="ComboPicker" name="velocityCurve_2">
-            <property name="geometry">
-             <rect>
-              <x>100</x>
-              <y>100</y>
+              <x>210</x>
+              <y>90</y>
               <width>61</width>
               <height>21</height>
              </rect>
@@ -908,8 +892,8 @@
            <widget class="QLabel" name="label_10">
             <property name="geometry">
              <rect>
-              <x>20</x>
-              <y>100</y>
+              <x>120</x>
+              <y>90</y>
               <width>61</width>
               <height>21</height>
              </rect>
@@ -918,20 +902,84 @@
              <string>Fx Bypass:</string>
             </property>
            </widget>
-           <widget class="QSpinBox" name="masterTune">
+           <widget class="DialKnob" name="masterTune">
             <property name="geometry">
              <rect>
-              <x>100</x>
-              <y>40</y>
-              <width>61</width>
-              <height>21</height>
+              <x>30</x>
+              <y>30</y>
+              <width>51</width>
+              <height>41</height>
              </rect>
             </property>
-            <property name="minimum">
-             <number>-36</number>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
             </property>
             <property name="maximum">
-             <number>36</number>
+             <number>32</number>
+            </property>
+            <property name="value">
+             <number>6</number>
+            </property>
+            <property name="notchTarget">
+             <double>8.000000000000000</double>
+            </property>
+            <property name="notchesVisible">
+             <bool>true</bool>
+            </property>
+           </widget>
+           <widget class="DialKnob" name="transpose">
+            <property name="geometry">
+             <rect>
+              <x>30</x>
+              <y>90</y>
+              <width>51</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="maximum">
+             <number>32</number>
+            </property>
+            <property name="value">
+             <number>6</number>
+            </property>
+            <property name="notchTarget">
+             <double>8.000000000000000</double>
+            </property>
+            <property name="notchesVisible">
+             <bool>true</bool>
             </property>
            </widget>
           </widget>
